--- a/6584_GameProject.vcxproj
+++ b/6584_GameProject.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -150,12 +150,17 @@
     <ClCompile Include="animated_texture.cpp" />
     <ClCompile Include="asset.cpp" />
     <ClCompile Include="assets.cpp" />
+    <ClCompile Include="blinking_text.cpp" />
     <ClCompile Include="Circle_2D.cpp" />
     <ClCompile Include="editor.cpp" />
     <ClCompile Include="engine.cpp" />
+    <ClCompile Include="flymonster.cpp" />
+    <ClCompile Include="gameover_scene.cpp" />
+    <ClCompile Include="game_manager.cpp" />
     <ClCompile Include="game_object.cpp" />
     <ClCompile Include="game_scene.cpp" />
     <ClCompile Include="ground.cpp" />
+    <ClCompile Include="health.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="logo.cpp" />
     <ClCompile Include="main.cpp" />
@@ -163,6 +168,7 @@
     <ClCompile Include="menu_scene.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="scene.cpp" />
+    <ClCompile Include="scene_manager.cpp" />
     <ClCompile Include="sound.cpp" />
     <ClCompile Include="text.cpp" />
     <ClCompile Include="texture.cpp" />
@@ -173,13 +179,18 @@
     <ClInclude Include="animated_texture.h" />
     <ClInclude Include="asset.h" />
     <ClInclude Include="assets.h" />
+    <ClInclude Include="blinking_text.h" />
     <ClInclude Include="Circle_2D.h" />
     <ClInclude Include="configuration.h" />
     <ClInclude Include="editor.h" />
     <ClInclude Include="engine.h" />
+    <ClInclude Include="flymonster.h" />
+    <ClInclude Include="gameover_scene.h" />
+    <ClInclude Include="game_manager.h" />
     <ClInclude Include="game_object.h" />
     <ClInclude Include="game_scene.h" />
     <ClInclude Include="ground.h" />
+    <ClInclude Include="health.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="logo.h" />
     <ClInclude Include="mario.h" />
@@ -187,6 +198,7 @@
     <ClInclude Include="player.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="scene.h" />
+    <ClInclude Include="scene_manager.h" />
     <ClInclude Include="sound.h" />
     <ClInclude Include="text.h" />
     <ClInclude Include="texture.h" />
